fixed copypaste bug ptcontroller, finished product type in frontend (hopefully)
